labs/RuntimeModernization/license-demo/pbw_migrationBundle/deploy/k8s/deployment.yaml
# Generated by IBM TransformationAdvisor
# Wed Mar 06 14:54:27 UTC 2024
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plantsbywebsphereee6
  name: plantsbywebsphereee6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plantsbywebsphereee6
  template:
    metadata:
      labels:
        app: plantsbywebsphereee6
    spec:
      containers:
        - image: IMAGE_REFERENCE
          imagePullPolicy: Always
          name: plantsbywebsphereee6
          ports:
            - containerPort: 9080
              protocol: TCP
