labs/RuntimeModernization/license-demo/pbw_migrationBundle/deploy/k8s/service.yaml
# Generated by IBM TransformationAdvisor
# Wed Mar 06 14:54:27 UTC 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plantsbywebsphereee6
  name: plantsbywebsphereee6
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: plantsbywebsphereee6
