labs/RuntimeModernization/license-demo/pbw_migrationBundle/deploy/k8s/route.yaml
# Generated by IBM TransformationAdvisor
# Wed Mar 06 14:54:27 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: plantsbywebsphereee6
  name: plantsbywebsphereee6
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: plantsbywebsphereee6
    weight: 100
